--- a/gradle/lib.gradle
+++ b/gradle/lib.gradle
@@ -1,13 +1,12 @@
 ext{
     versions = [
             jdk:'1.8',
-            spring:'4.2.5.RELEASE',
+            spring:'4.3.0.RELEASE',
             hibernate:'5.1.0.Final',
             hibernateValidator:'5.2.4.Final',
-            springdatajpa:'1.9.4.RELEASE',
-            springsecurity:'4.0.4.RELEASE',
+            springdatajpa:'1.10.1.RELEASE',
             hikariCP: '2.4.6',
-            h2:'1.4.191',
+            h2:'1.4.192',
             mysqldriver:'5.1.38',
             ehcacheCore:'2.6.11',
             sitemesh:'3.0.1',
@@ -20,36 +19,24 @@ ext{
             lombok:'1.16.8',
             fileUpload: '1.3.1',
             commonsIo: '2.4',
-            jackson: '2.7.4',
+            jackson: '2.8.0.rc1',
             commonslang: '3.4',
-            springsocial :'1.1.4.RELEASE'
+            bootstrap : '4.0.0-alpha.2'
     ]
 }
 
 
 dependencies {
+
+    // front
+    compile("org.webjars:bootstrap:${versions.bootstrap}")
+
     // spring
     compile("org.springframework:spring-webmvc:${versions.spring}")
     compile("org.springframework:spring-context:${versions.spring}")
     compile("org.springframework:spring-context-support:${versions.spring}")
     compile("com.navercorp.lucy:lucy-xss:${versions.lucy}")
     compile("org.sitemesh:sitemesh:${versions.sitemesh}")
-
-    // spring security
-    compile "org.springframework.security:spring-security-core:${versions.springsecurity}"
-    compile "org.springframework.security:spring-security-config:${versions.springsecurity}"
-    compile "org.springframework.security:spring-security-taglibs:${versions.springsecurity}"
-    compile "org.springframework.security:spring-security-web:${versions.springsecurity}"
-    testCompile "org.springframework.security:spring-security-test:${versions.springsecurity}"
-
-    // social
-    compile("org.springframework.social:spring-social-config:${versions.springsocial}")
-    compile("org.springframework.social:spring-social-core:${versions.springsocial}")
-    compile("org.springframework.social:spring-social-security:${versions.springsocial}")
-    compile("org.springframework.social:spring-social-web:${versions.springsocial}")
-    compile("org.springframework.social:spring-social-facebook:2.0.3.RELEASE")
-    compile("org.springframework.social:spring-social-twitter:1.1.2.RELEASE")
-
 
     // persistence
     compile("org.springframework.data:spring-data-jpa:${versions.springdatajpa}")
@@ -67,10 +54,10 @@ dependencies {
 
     // util
     compile("org.projectlombok:lombok:${versions.lombok}")
-    compile "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
-    compile "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
-    compile "com.fasterxml.jackson.core:jackson-databind:${versions.jackson}"
-    compile "org.apache.commons:commons-lang3:${versions.commonslang}"
+    compile("com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}")
+    compile("com.fasterxml.jackson.core:jackson-core:${versions.jackson}")
+    compile("com.fasterxml.jackson.core:jackson-databind:${versions.jackson}")
+    compile("org.apache.commons:commons-lang3:${versions.commonslang}")
 
 
     // test
